--- a/chatbot.html
+++ b/chatbot.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -25,8 +26,8 @@
       chatbox.scrollTop = chatbox.scrollHeight;
       userInput.value = '';
 
-      // Send message to backend
-      const response = await fetch('http://127.0.0.1:5000/chat', {
+      // Send message to backend (UPDATED URL)
+      const response = await fetch('https://chat-bot-1-3n6x.onrender.com/chat', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ message: message })
@@ -38,3 +39,7 @@
   </script>
 </body>
 </html>
+
+
+
+
