--- a/chatbot.html
+++ b/chatbot.html
@@ -26,20 +26,20 @@
       chatbox.scrollTop = chatbox.scrollHeight;
       userInput.value = '';
 
-      // Send message to backend (UPDATED URL)
-      const response = await fetch('https://chat-bot-1-3n6x.onrender.com/chat', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message: message })
-      });
-      const data = await response.json();
-      chatbox.innerHTML += `<div class="bot">Bot: ${data.response}</div>`;
+      try {
+        const response = await fetch('https://chat-bot-1-3n6x.onrender.com/chat', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ message: message })
+        });
+        if (!response.ok) throw new Error('Network response was not ok');
+        const data = await response.json();
+        chatbox.innerHTML += `<div class="bot">Bot: ${data.response}</div>`;
+      } catch (error) {
+        chatbox.innerHTML += `<div class="bot">Bot: Sorry, I could not connect to the server.</div>`;
+      }
       chatbox.scrollTop = chatbox.scrollHeight;
     };
   </script>
 </body>
 </html>
-
-
-
-
